--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="activity_main_vertical">VERTICAL</string>
     <string name="activity_main_horizontal">HORIZONTAL</string>
-    <string name="activity_main_horizontal_reverse">HORIZONTAL(REVERSE)</string>
+
+    <string name="activity_horizontal_normal">Normal</string>
+    <string name="activity_horizontal_reverse">Reverse</string>
 </resources>
